<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/black"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/camera_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.camera.view.PreviewView
        android:id="@+id/view_finder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:importantForAccessibility="no"
        android:contentDescription="@string/camera_preview_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="3:4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:scaleType="fillStart" />

    <com.naveen.ba_v2.OverlayView
        android:id="@+id/overlay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:importantForAccessibility="no"
        android:translationZ="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="3:4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        tools:text="100ms"
        android:textColor="@color/white"
        android:id="@+id/inferenceTime"
        android:importantForAccessibility="no"
        android:layout_margin="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/startButton"
        android:text="@string/btn_start"
        android:contentDescription="@string/btn_start_desc"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        android:importantForAccessibility="yes"/>

    <Button
        android:id="@+id/endButton"
        android:text="@string/btn_end"
        android:contentDescription="@string/btn_end_desc"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:importantForAccessibility="yes"/>



    <!--    <ImageView-->
<!--        android:id="@+id/ivTop"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"/>-->
</androidx.constraintlayout.widget.ConstraintLayout>